--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cpk",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
@@ -56,34 +56,34 @@
     "base64-arraybuffer": "^1.0.2",
     "date-fns": "^4.1.0",
     "dooboo-ui": "^0.2.40",
-    "expo": "^52.0.0",
+    "expo": "~52.0.11",
     "expo-constants": "~17.0.3",
     "expo-device": "~7.0.1",
-    "expo-file-system": "~18.0.3",
+    "expo-file-system": "~18.0.4",
     "expo-font": "~13.0.1",
-    "expo-image": "~2.0.0",
-    "expo-image-picker": "~16.0.2",
+    "expo-image": "~2.0.2",
+    "expo-image-picker": "~16.0.3",
     "expo-linear-gradient": "~14.0.1",
-    "expo-linking": "~7.0.2",
+    "expo-linking": "~7.0.3",
     "expo-localization": "~16.0.0",
     "expo-notifications": "~0.29.8",
-    "expo-router": "~4.0.5",
+    "expo-router": "~4.0.9",
     "expo-screen-orientation": "~8.0.0",
     "expo-secure-store": "~14.0.0",
     "expo-sharing": "~13.0.0",
-    "expo-splash-screen": "~0.29.10",
+    "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.3",
-    "expo-updates": "~0.26.7",
+    "expo-system-ui": "~4.0.4",
+    "expo-updates": "~0.26.9",
     "expo-video-thumbnails": "~9.0.2",
     "expo-web-browser": "~14.0.1",
     "i18n-js": "^4.5.0",
     "lottie-react": "^2.4.0",
-    "lottie-react-native": "7.0.0",
+    "lottie-react-native": "7.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.1",
-    "react-native": "0.76.2",
+    "react-native": "0.76.3",
     "react-native-device-info": "^14.0.0",
     "react-native-error-boundary": "^1.2.5",
     "react-native-gesture-handler": "~2.20.2",
@@ -92,7 +92,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "^4.0.0",
+    "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
     "react-native-tab-view": "^4.0.1",
     "react-native-url-polyfill": "^2.0.0",
@@ -129,9 +129,9 @@
     "eslint-plugin-jest": "^28.9.0",
     "eslint-plugin-prettier": "^5.2.1",
     "expo-build-properties": "~0.13.1",
-    "expo-dev-client": "~5.0.1",
+    "expo-dev-client": "~5.0.4",
     "jest": "^29.7.0",
-    "jest-expo": "~52.0.1",
+    "jest-expo": "~52.0.2",
     "jest-fetch-mock": "^3.0.3",
     "prettier": "^3.3.3",
     "prisma": "^5.22.0",
